Baby Senses: fixes text layout on iPhone.  Rremoves inline formatted of content text, which was forcing width on iPhone.  Now, it's all fluid baby.

--- a/Baby Senses/css/layout.responsive.css
+++ b/Baby Senses/css/layout.responsive.css
@@ -24,6 +24,11 @@
  * of cleanup elsewhere.
  */
 
+/* Give all the inner body content a non-inline style, so we can override it here! */
+.content-node-text {
+    width: 408px;
+}
+
 /* Move the footer above the header and body content, so that it doesn't risk occlusion. */
 .footer {
     z-index: 30;
